# cobo-tokenization

./: .gitignore  CoboFundToken.sol  README.md  remix.config.json
evm/: README.md  foundry.toml  remappings.txt
evm/script/: DeployCoboERC20Logic.s.sol  DeployCoboERC20WrapperLogic.s.sol
evm/script/Fund/: DeployFundLogic.s.sol  DeployFundProxy.s.sol  DeployFundProxyTemplate.s.sol  DeployMockERC20.s.sol  PostDeployConfig.env.example  PostDeployConfig.s.sol
evm/src/CoboERC20/: CoboERC20.sol  CoboERC20Wrapper.sol  README.md
evm/src/Fund/: CoboFundOracle.sol  CoboFundToken.sol  CoboFundVault.sol  README.md
evm/src/Fund/libraries/: LibFundErrors.sol
evm/src/deploy/: ProxyFactory.sol
evm/test/Fund/: CoboFundOracle.t.sol  CoboFundToken.t.sol  CoboFundVault.t.sol  FundFuzz.t.sol  FundIntegration.t.sol  FundNumerical.t.sol  FundSecurity.t.sol  FundTestBase.sol  FundUpgrade.t.sol
evm/test/Fund/mocks/: MockERC20.sol
solana/: Anchor.toml
solana/programs/tokenization-wrap/: Cargo.toml
solana/programs/tokenization-wrap/src/: constants.rs  errors.rs  lib.rs
solana/programs/tokenization-wrap/src/instructions/: close_vault.rs  create_mint.rs  manage.rs  mod.rs  recover_mint.rs  role.rs  unwrap.rs  wrap.rs
solana/tests/: tokenization-wrap.ts
